name:                haskell-euler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/authentik8/haskell-euler#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Windridge
maintainer:          jonathan.windridge@gmail.com
copyright:           2016
category:            learning-haskell
build-type:          Simple
cabal-version:       >=1.10

executable haskell-euler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
  other-modules:       Util,
                       Common.Fibonacci,
                       Common.Primes,
                       Common.LCM,
                       Sols.Prob1,
                       Sols.Prob2,
                       Sols.Prob3,
                       Sols.Prob4,
                       Sols.Prob5,
                       Sols.Prob6,
                       Sols.Prob7,
                       Sols.Prob8,
                       Sols.Prob9,
                       Sols.Prob10,
                       Sols.Prob11,
                       Sols.Prob12,
                       Sols.Prob13
